# barebones_listening_server

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: CQuoteDay.hpp  TcpListener.hpp
src/: CQuoteDay.cpp  TcpListener.cpp  main.cpp
